--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         
           <div class="line">
             <h1 class="headline text-thin text-s-size-30"> <span class="text-primary">About</span></h1>
-            <p class="text-size-20 text-s-size-16 text-thin"><strong>Export in Vijayawada is one of the leading businesses in the Fish Retailers& Frozen Foods. Also known for Fish Wholesalers, Fish Retailers, Aquarium Fish Dealers, Dry Fish Wholesalers, Anchovy Dealers and much more. Find Address, Contact Number, Reviews & Ratings, Photos, Maps of M.d.t.fish Exports, Vijayawada.</strong></p>
+            <p class="text-size-20 text-s-size-16 text-thin"><strong>Vijayawada Memory Olympics are memory games held for high school students in Vijaywada with the aim to challenge and broaden their mental horizons, build cognitive and neural feedback skills, gamify learning and exercise their brain muscles to expand on their abilities to recall concepts and connect concepts together.</strong></p>
            <!--  <i class="icon-more_node_links icon2x text-primary margin-top-bottom-10"></i>
             <p class="text-size-20 text-s-size-16 text-thin text-primary">Try resize your browser window</p>
           </div>   -->
