--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <div class="padding-2x">
                     <div class="s-12 m-12 l-8">
                         <div class="s-12 l-2">
-            <a href="index.html" class="logo"><img src="img/MDT.png" alt=""></a>
+            <a href="index.html" class="logo"><img src="img/MDT.JPEG" alt=""></a>
           </div>
                      <!--  <p class="text-white text-s-size-20 text-m-size-40 text-l-size-60 margin-bottom-40 text-thin text-line-height-1">With Fully Responsive Components</p>
                       <p class="text-white text-size-16 margin-bottom-30">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis</p>     -->
@@ -180,7 +180,7 @@
                   <div class="padding-2x">
                     <div class="s-12 m-12 l-8">
                         <div class="s-12 l-2">
-            <a href="index.html" class="logo"><img src="img/MDT.png" alt=""></a>
+            <a href="index.html" class="logo"><img src="img/MDT.JPEG" alt=""></a>
           </div>
                      <!--  <p class="text-white text-s-size-20 text-m-size-40 text-l-size-60 margin-bottom-40 text-thin text-line-height-1">With Fully Responsive Components</p>
                       <p class="text-white text-size-16 margin-bottom-30">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis</p>     -->
