--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>m.d.t</title>
+    <title>mVijayawada Memory Olympics</title>
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/responsee.css">
@@ -49,7 +49,7 @@
         <div class="line">
           <div class="s-12 l-9">
               <h1> Vijayawada Memory Olympics : August 13th, 2022 </h1>
-            <!--<a href="index.html" class="logo"><img src="img/MDTE.png" alt=""></a>-->
+            <!--<a href="index.html" class="logo"><img src="img/MDT.png" alt=""></a>-->
           </div>
           <div class="top-nav s-12 l-10">
             <p class="nav-text"></p>
