--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>M.d.t</title>
+    <title>Vijayawada Memory Olympics</title>
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/responsee.css">
@@ -111,7 +111,7 @@
                 <div class="image-with-hover-overlay image-hover-zoom margin-bottom">
                   <div class="image-hover-overlay background-primary"> 
                     <div class="image-hover-overlay-content text-center padding-2x">
-                      <h2>Apollo Fish</h2>  
+                      <h2>Image</h2>  
                     </div> 
                   </div> 
                   <img src="img/products/1.jpeg" alt="" title="Portfolio Image 1" />
