--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
       <section class="section background-primary text-center">
         <div class="line">
           <div class="s-12 m-10 l-8 center">
-            <h4 class="headline text-thin text-s-size-30" style="color:black;" ><strong>We are Providing WHOLE SALE & RETAIL</strong></h4>
-            <p class="text-size-20">FROZEN FOODS LIKE, TILAPIA BONELESS, INDAIN BASA AND PRWANS </p>
+            <h4 class="headline text-thin text-s-size-30" style="color:black;" ><strong>Vijayawada Memory Olympics : August 13th, 2022 </strong></h4>
+            <p class="text-size-20">VIJAYAWADA</p>
           </div>
         </div>  
       </section>
